--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <form id="contactForm" name="sentMessage" method="POST"  action="https://formspree.io/richardskim111@gmail.com" novalidate>
+            <form id="contactForm" name="sentMessage" method="POST"  action="https://formspree.io/richard.kim@codersbeyondbars.org" novalidate>
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
