Added Why High-Tech

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
               <a class="nav-link js-scroll-trigger" href="#solution">Our Solution</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#hightech">Why High-Tech</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
             </li>
             <li class="nav-item">
@@ -74,7 +77,6 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <h2 class="section-heading text-uppercase">The Problem</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
         </div>
         <div class="row justify-content-center problem-item">
@@ -83,7 +85,7 @@
           </div>
           <div class="col-md-7 col-sm-8 col-sm-8 col-10">
             <h5 class="mt-0 mb-1 service-heading">The U.S. has 5% of the world’s population, but 25% of the world’s prisoners.</h5>
-            <p class="text-muted">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            <p class="text-muted">There are currently over 2 million Americans behind bars in county jails, state prisons, and federal penitentiaries, and many millions more who are on parole or probation.  From 1973 to 2009, the American prison population grew by 705%, resulting in more than one in 100 adults behind bars.</p>
           </div>
         </div>
         <div class="row justify-content-center problem-item">
@@ -92,7 +94,7 @@
           </div>
           <div class="col-md-7 col-sm-8 col-10 order-md-1">
             <h5 class="mt-0 mb-1 service-heading">Up to 60% of formerly incarcerated people cannot find employment one year after their release.</h5>
-            <p class="text-muted">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            <p class="text-muted">Approximately 650,000 incarcerated individuals are released annually from state and federal correctional facilities.  According to a report in 2008 by National Institute of Justice, up to 60 percent of former inmates remain jobless a year after their release because of their criminal records and low literacy levels. Employment rates and earnings histories of people in prisons and jails are often low before incarceration as a result of limited education experiences and low skill levels.</p>
           </div>
         </div>
         <div class="row justify-content-center problem-item">
@@ -101,7 +103,7 @@
           </div>
           <div class="col-md-7 col-sm-8 col-10 ">
             <h5 class="mt-0 mb-1 service-heading">Over two-thirds of formerly incarcerated people will be rearrested for a felony or serious misdemeanor within 3 years.</h5>
-            <p class="text-muted">More than 650,000 people are released from Federal and State prison every year.</p>
+            <p class="text-muted">Studies show that there is a powerful relationship between unemployment and recidivism rate among formerly incarcerated individuals.  Locked out of gainful employment opportunities, many formerly incarcerated individuals fall back to substance abuse or engage in criminal activities.  According to a 2008 report by the Urban Institute, "Individuals who made more than $10 an hour were half as likely to return to prison as those making less than $7 an hour."</p>
           </div>
         </div>
         <div class="row justify-content-center problem-item">
@@ -109,8 +111,8 @@
             <img class="img-thumbnail img-fluid" src="img/problem/cost.jpg" alt="Cost">
           </div>
           <div class="col-md-7 col-sm-8 col-10 order-md-1">
-            <h5 class="mt-0 mb-1 service-heading">Incarcerating a person costs American taxpayers more than $31,000 per year.</h5>
-            <p class="text-muted">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            <h5 class="mt-0 mb-1 service-heading">Incarcerating a person in the U.S. costs American taxpayers more than $31,000 per year.</h5>
+            <p class="text-muted">In 2011 report by the Pew Center, the growth in prison population in America came at substantial cost, with annual State and Federal expenditures on corrections growing by 305 percent during the past two decades, to total cost of approximately $52 billion.  According to this report, if 10 states with the highest recidivism rates reduced their rates by 10%, they could save more than $470 million a year.</p>
           </div>
         </div>
       </div>
@@ -122,7 +124,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <h2 class="section-heading text-uppercase">Our Solution</h2>
-            <h3 class="section-subheading text-muted">To address the mass incarceration problem and high rate of recidivism in our criminal justice system, we offer a comprehensive solution that we call <strong>Through the Gateway</strong>.</h3>
+            <h3 class="section-subheading text-muted">Coders Beyond Bars is a not-for-profit organization with the mission of providing educational  opportunities for incarcerated individuals in high-tech skills in order to prepare them for successful re-entry into society and careers in high-tech industries.</h3>
           </div>
         </div>
         <div class="row">
@@ -134,7 +136,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>High-Tech Courses</h4>
+                    <h4>High-Tech Education</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">We offer university-level courses in high-tech skills such as Data Science, Web Development, UX/UI Design, Database Management, etc.  Courses are taught by instructors with proven track record of professional and pedogical experience.</p>
@@ -209,7 +211,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <h4 class="align-middle">Through <br />the <br />Gateway</h4>
+                  <h4 class="align-middle">Pathway to Successful Careers</h4>
                 </div>
               </li>
             </ul>
@@ -218,13 +220,36 @@
       </div>
     </section>
 
+    <!-- Why High-Tech Education-->
+    <section id="hightech">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <h2 class="section-heading text-uppercase">Why High-Tech Education</h2>
+            <h3 class="section-subheading text-muted">U.S. economy faces a shortage of approximately 180,000 talents with data analytical skills</h3>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3 col-10d-flex align-items-start justify-content-center">
+            <img class="img-thumbnail img-fluid" src="img/hightech/shortage.jpg" alt="Shortage">
+          </div>
+          <div class="col-md-7 col-sm-8 col-10">
+            <h5 class="mt-0 mb-1 service-heading"></h5>
+            <p class="text-muted">Today, employment opportunities are growing for those who possess high-tech skills such as software engineering and data science as the use of information technology expands in many industries.  All the while, blue-collar jobs are disappearing due to overseas outsourcing and automation.  This trend is particularly problematic for incarcerated individuals who will face formidable employment challenges due to their conviction records and the lack of skills applicable in jobs that are less susceptible to automation and outsourcing.  </p>
+            <p class="text-muted">Inspired by successes of The Last Mile in California and Code4000 in the UK that educated  incarcerated individuals to become productive web and app developers, Coders Beyond Bars will launch a pilot program to offer <strong>Introduction to Data Science</strong> course in a correctional facility in Boston, Massachusetts with the aim of teaching  practical skills such as computer programming, data visualization, and database management to prepare the students for entry-level data science positions.</p>
+            <p class="text-muted">According to McKinsey &amp; Co, the U.S. economy faces a shortage of approximately 180,000 talents with data analytical skills, and this shortage is particularly acute in Boston due to high-concentration of high-tech industries.  Our aim is to address this shortage through educating incarcerated individuals and connecting them with companies seeking alternative pool of data analytics talents.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Team -->
-    <section id="team">
+    <section class="bg-light" id="team">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <h2 class="section-heading text-uppercase">Our Team</h2>
-            <h3 class="section-subheading text-muted">We have a small team of individuals who are passionate about transformation of criminal justice system through education.</h3>
+            <h3 class="section-subheading text-muted">We are a small team of passionate individuals who have a heart for transformation of criminal justice system through education.</h3>
           </div>
         </div>
         <div class="row">
@@ -261,11 +286,11 @@
     </section>
 
     <!-- Team -->
-    <section class="bg-light" id="partners">
+    <section id="partners">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
-            <h2 class="section-heading text-uppercase">Our Partners</h2>
+            <h2 class="section-heading text-uppercase">Our Advisors</h2>
             <h3 class="section-subheading text-muted">We are proud to partner with experts in high-tech education and prison education who share our vision of solving the mass incarceration problem through high-tech education in prisons.</h3>
           </div>
         </div>
