Edit Our Solution

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <h4>High-Tech Education</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">We offer university-level courses in high-tech skills such as Data Science, Web Development, UX/UI Design, Database Management, etc.  Courses are taught by instructors with proven track record of professional and pedogical experience.</p>
+                    <p class="text-muted">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, Database Management, etc.  Courses are taught by instructors with proven track record of professional and pedogical experience.</p>
                   </div>
                 </div>
               </li>
@@ -179,7 +179,7 @@
                     <h4>Internship</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Through collaboration with our member companies, we offer full-time, paid internships to our students upon their release.  This enables them  </p>
+                    <p class="text-muted">Through collaboration with our member companies, we offer full-time, paid internships to our students upon their release.  This enables the students ton continue their education through on-the-job training and relieve them of the pressure to find employment right after being released from correctional facilities.</p>
                   </div>
                 </div>
               </li>
@@ -192,7 +192,7 @@
                     <h4>Career &amp; Life Mentorship</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">We continuously engage our students even after their release from correctional facilities and follow up on their careers.  We provide additional workshops such as personal finance, entrepreneurship, etc.</p>
+                    <p class="text-muted">We continuously engage our students even after their release and follow up on their careers and transition to life outside.  We provide one-to-one counseling as well as group workshops on various topics including personal finance and entrepreneurship.</p>
                   </div>
                 </div>
               </li>
