--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <h4 class="align-middle">Pathway to Successful Careers</h4>
+                  <h4 class="align-middle">Pathway to Successful Career</h4>
                 </div>
               </li>
             </ul>
