Edit Our Advisor

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/richard.jpg" alt="Richard Kim">
               <h4>Richard Kim</h4>
-              <p class="text-muted">Chief Course Designer &amp; Co-founder</p>
+              <p class="text-muted">Chief Educator &amp; Co-founder</p>
               <div class='row justify-content-center'>
                 <div class='col col-9 col-sm-9 text-justify'>
                   Richard earned his master's from Media Arts and Sciences from Media Lab, Massachusetts Institute of Technology where he specialized in artificial intelligence and computational social science.  Prior to coming back to graduate school, he worked in the financial services industry as an investment banker and hedge fund analyst for approximately six years.  He has taught four courses in computer science and data science as a teaching fellow at Harvard University.
@@ -291,7 +291,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <h2 class="section-heading text-uppercase">Our Advisors</h2>
-            <h3 class="section-subheading text-muted">We are proud to partner with experts in high-tech education and prison education who share our vision of solving the mass incarceration problem through high-tech education in prisons.</h3>
+            <h3 class="section-subheading text-muted">We are proud to be advised by experts in the tech industry and prison education system who share our vision of solving the mass incarceration problem through high-tech education in prisons.</h3>
           </div>
         </div>
         <div class="row">
