Edit Our Advisor

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-sm-8 text-center">
-          <p class="large text-muted">We are looking for new team-members!  If you have a passion for prison education, social justice, and education in technology, <a class="js-scroll-trigger" href="#contact">contact us</a>.</p>
+          <p class="large text-muted">We are looking for new team members!  If you have a passion for prison education, social justice, and education in technology, <a class="js-scroll-trigger" href="#contact">contact us</a>.</p>
         </div>
       </div>
     </section>
