Changed location of Who We Are and The Problem

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
               <a class="nav-link js-scroll-trigger" href="#problem">The Problem</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#solution">Our Solution</a>
+              <a class="nav-link js-scroll-trigger" href="#hightech">Who We Are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#hightech">Why High-Tech</a>
+              <a class="nav-link js-scroll-trigger" href="#solution">Our Solution</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
@@ -118,13 +118,36 @@
       </div>
     </section>
 
+    <!-- Who We Are -->
+    <section class="bg-light" id="hightech">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <h2 class="section-heading text-uppercase">Who We Are</h2>
+            <h3 class="section-subheading text-muted">Coders Beyond Bars is a not-for-profit organization with the mission of providing educational  opportunities for incarcerated individuals in high-tech skills in order to prepare them for successful re-entry into society and careers in high-tech industries.</h3>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3 col-10d-flex align-items-start justify-content-center">
+            <img class="img-thumbnail img-fluid" src="img/hightech/shortage.jpg" alt="Shortage">
+          </div>
+          <div class="col-md-7 col-sm-8 col-10">
+            <h5 class="mt-0 mb-1 service-heading"></h5>
+            <p class="text-muted">Today, employment opportunities are growing  for those who possess high-tech skills such as software engineering and data science as the use of information technology expands in many industries.  All the while, blue-collar jobs are disappearing due to overseas outsourcing and automation.  This trend is particularly problematic for incarcerated individuals who will face formidable employment challenges due to their conviction records and the lack of skills applicable in jobs that are less susceptible to automation and outsourcing.  Studies suggests that over 60% of formerly incarcerated individuals return to prisons within three years of being released and that lack of employment opportunities is a major contributing factors to the high rate of recidivism.</p>
+
+            <p class="text-muted">Inspired by successes of The Last Mile in California and Code4000 in the UK that educated  incarcerated individuals to become productive web and app developers, Coders Beyond Bars will launch a pilot program to offer Introduction to Data Science course in a correctional facility in Boston, Massachusetts with the aim of teaching  practical skills such as computer programming, data visualization, and database management to prepare the students for entry-level data science positions.   American economy faces a shortage of 180,000 talents with data analytical skills, and this shortage is particularly acute in Boston due to concentration of high-tech industries.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Our Solution -->
-    <section class="bg-light" id="solution">
+    <section id="solution">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <h2 class="section-heading text-uppercase">Our Solution</h2>
-            <h3 class="section-subheading text-muted">Coders Beyond Bars is a not-for-profit organization with the mission of providing educational  opportunities for incarcerated individuals in high-tech skills in order to prepare them for successful re-entry into society and careers in high-tech industries.</h3>
+            <h3 class="section-subheading text-muted">Our Program is divided into 6 stages.</h3>
           </div>
         </div>
         <div class="row">
@@ -136,7 +159,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>High-Tech Education</h4>
+                    <h4>1. High-Tech Education</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">We offer university-accredited courses in high-tech skills such as Data Science, Web Development, UX/UI Design, Database Management, etc.  Courses are taught by instructors with proven track record of professional and pedogical experience.</p>
@@ -149,7 +172,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Real-world Projects</h4>
+                    <h4>2. Real-world Projects</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Collaborating with local technology companies, we design our courses with real-world problems  .  These projects enable our students to build up their professional portfolio of projects to showcase their talent to prospective employers in the tech industry.</p>
@@ -162,7 +185,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Re-entry Transition</h4>
+                    <h4>3. Re-entry Transition</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">We help our students prepare for career and life outside of correctional facilities by coaching them in interview skills, resume writing, business ethics, etc. through one-to-one mentoring and group workshops.
@@ -176,7 +199,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Internship</h4>
+                    <h4>4. Internship</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Through collaboration with our member companies, we offer full-time, paid internships to our students upon their release.  This enables the students ton continue their education through on-the-job training and relieve them of the pressure to find employment right after being released from correctional facilities.</p>
@@ -189,7 +212,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Career &amp; Life Mentorship</h4>
+                    <h4>5. Career &amp; Life Mentorship</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">We continuously engage our students even after their release and follow up on their careers and transition to life outside.  We provide one-to-one counseling as well as group workshops on various topics including personal finance and entrepreneurship.</p>
@@ -202,7 +225,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Building A Community</h4>
+                    <h4>6. Building A Community</h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">We strive to build a community of alumni who finished our <em>Throught the Gateway</em> path and are working professionals in the technology industry.  We hold monthly coding nights where the alumni can come together and code together in a collaborative setting.  We encourage collaboration and entrepreneurships through the alumni network.</p>
@@ -220,30 +243,7 @@
       </div>
     </section>
 
-    <!-- Why High-Tech Education-->
-    <section id="hightech">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8 text-center">
-            <h2 class="section-heading text-uppercase">Why High-Tech Education</h2>
-            <h3 class="section-subheading text-muted">U.S. economy faces a shortage of approximately 180,000 talents with data analytical skills</h3>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-3 col-10d-flex align-items-start justify-content-center">
-            <img class="img-thumbnail img-fluid" src="img/hightech/shortage.jpg" alt="Shortage">
-          </div>
-          <div class="col-md-7 col-sm-8 col-10">
-            <h5 class="mt-0 mb-1 service-heading"></h5>
-            <p class="text-muted">Today, employment opportunities are growing for those who possess high-tech skills such as software engineering and data science as the use of information technology expands in many industries.  All the while, blue-collar jobs are disappearing due to overseas outsourcing and automation.  This trend is particularly problematic for incarcerated individuals who will face formidable employment challenges due to their conviction records and the lack of skills applicable in jobs that are less susceptible to automation and outsourcing.  </p>
-            <p class="text-muted">Inspired by successes of The Last Mile in California and Code4000 in the UK that educated  incarcerated individuals to become productive web and app developers, Coders Beyond Bars will launch a pilot program to offer <strong>Introduction to Data Science</strong> course in a correctional facility in Boston, Massachusetts with the aim of teaching  practical skills such as computer programming, data visualization, and database management to prepare the students for entry-level data science positions.</p>
-            <p class="text-muted">According to McKinsey &amp; Co, U.S. economy faces a shortage of approximately 180,000 talents with data analytical skills. This shortage is particularly acute in Boston due to high-concentration of high-tech industries.  Our aim is to address this shortage through educating incarcerated individuals and connecting them with companies seeking alternative pool of data analytics talents.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Team -->
+        <!-- Team -->
     <section class="bg-light" id="team">
       <div class="container">
         <div class="row justify-content-center">
@@ -285,7 +285,7 @@
       </div>
     </section>
 
-    <!-- Team -->
+    <!-- Advisors-->
     <section id="partners">
       <div class="container">
         <div class="row justify-content-center">
