Update Anjali photo

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="intro-text">
           <h1 class="header-brand">Coders Beyond Bars</h1>
-          <div class="intro-heading">Transforming lives through high-tech education for incarcerated individuals</div>
+          <div class="intro-heading">Transforming lives of incarcerated individuals through high-tech education</div>
         </div>
       </div>
     </header>
@@ -111,7 +111,7 @@
             <img class="img-thumbnail img-fluid" src="img/problem/cost.jpg" alt="Cost">
           </div>
           <div class="col-md-7 col-sm-8 col-10 order-md-1">
-            <h5 class="mt-0 mb-1 service-heading">Incarcerating a person in the U.S. costs American taxpayers more than $31,000 per year.</h5>
+            <h5 class="mt-0 mb-1 service-heading">Approximately $52 billion is spent every year on incarceration in the U.S.</h5>
             <p class="text-muted">In 2011 report by the Pew Center, the growth in prison population in America came at substantial cost, with annual State and Federal expenditures on corrections growing by 305 percent during the past two decades, to total cost of approximately $52 billion.  According to this report, if 10 states with the highest recidivism rates reduced their rates by 10%, they could save more than $470 million a year.</p>
           </div>
         </div>
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <h2 class="section-heading text-uppercase">Who We Are</h2>
-            <h3 class="section-subheading text-muted">Coders Beyond Bars is a not-for-profit organization with the mission of providing educational  opportunities for incarcerated individuals in high-tech skills in order to prepare them for successful re-entry into society and careers in high-tech industries.</h3>
+            <h3 class="section-subheading text-muted">Coders Beyond Bars is a not-for-profit organization with the mission of providing educational  opportunities for incarcerated individuals in high-tech skills and post-release support in order to prepare them for successful re-entry into society and careers in high-tech industries.</h3>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -133,9 +133,9 @@
           </div>
           <div class="col-md-7 col-sm-8 col-10">
             <h5 class="mt-0 mb-1 service-heading"></h5>
-            <p class="text-muted">Today, employment opportunities are growing  for those who possess high-tech skills such as software engineering and data science as the use of information technology expands in many industries.  All the while, blue-collar jobs are disappearing due to overseas outsourcing and automation.  This trend is particularly problematic for incarcerated individuals who will face formidable employment challenges due to their conviction records and the lack of skills applicable in jobs that are less susceptible to automation and outsourcing.  </p>
-            <p class="text-muted">Inspired by successes of The Last Mile in California and Code4000 in the UK that educated  incarcerated individuals to become productive web and app developers, Coders Beyond Bars will launch a pilot program to offer Introduction to Data Science course in a correctional facility in Boston, Massachusetts with the aim of teaching  practical skills such as computer programming, data visualization, and database management to prepare the students for entry-level data science positions.   American economy faces a shortage of 180,000 talents with data analytical skills, and this shortage is particularly acute in Boston due to concentration of high-tech industries.</p>
-            <p class="text-muted">Our aim is to address this shortage in the supply of talent in data analytics skills by educating incarcerated individuals in those skills and connecting them with companies that seek their prospective employees from an alternative pool of talents.</p>
+            <p class="text-muted text-justify">Today, employment opportunities are growing  for those who possess high-tech skills such as software engineering and data science as the use of information technology expands in many industries.  All the while, blue-collar jobs are disappearing due to overseas outsourcing and automation.  This trend is particularly problematic for incarcerated individuals who will face formidable employment challenges due to their conviction records and the lack of skills applicable in jobs that are less susceptible to automation and outsourcing.  </p>
+            <p class="text-muted text-justify">Inspired by successes of The Last Mile in California and Code4000 in the UK that educated  incarcerated individuals to become productive web developers, Coders Beyond Bars will launch a pilot program to offer Introduction to Data Science course in a correctional facility in Boston, Massachusetts with the aim of teaching  practical skills such as computer programming, data visualization, and database management to prepare the students for entry-level data science positions.   American economy faces a shortage of 180,000 employees with data analytical skills, and this shortage is particularly acute in Boston due to concentration of high-tech industries.</p>
+            <p class="text-muted text-justify">Our aim is to address this shortage in the supply of talent in data analytics skills by educating incarcerated individuals in those skills and connecting them with companies that seek their prospective employees from an alternative pool of talents.</p>
           </div>
         </div>
       </div>
@@ -225,16 +225,16 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>6. Building A Community</h4>
+                    <h4>6. Alumni Community</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">We strive to build a community of alumni who finished our <em>Throught the Gateway</em> path and are working professionals in the technology industry.  We hold monthly coding nights where the alumni can come together and code together in a collaborative setting.  We encourage collaboration and entrepreneurships through the alumni network.</p>
+                    <p class="text-muted">We strive to build a community of alumni who completed our program and are working professionals in the technology industry.  We hold monthly coding nights where the alumni can come together and code together in a collaborative setting.  We encourage collaboration and entrepreneurship through the alumni network.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <h4 class="align-middle">Pathway to Successful Career</h4>
+                  <h4 class="align-middle">Pathway to A Successful Career</h4>
                 </div>
               </li>
             </ul>
@@ -249,7 +249,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <h2 class="section-heading text-uppercase">Our Team</h2>
-            <h3 class="section-subheading text-muted">We are a small team of passionate individuals who have a heart for transformation of criminal justice system through education.</h3>
+            <h3 class="section-subheading text-muted">We are a small team of passionate individuals who have passion for transformation of the criminal justice system through education.</h3>
           </div>
         </div>
         <div class="row">
@@ -257,21 +257,21 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/richard.jpg" alt="Richard Kim">
               <h4>Richard Kim</h4>
-              <p class="text-muted">Chief Educator &amp; Co-founder</p>
+              <p class="text-muted">Education Director &amp; Co-founder</p>
               <div class='row justify-content-center'>
                 <div class='col col-9 col-sm-9 text-justify'>
-                  Richard earned his master's from Media Arts and Sciences from Media Lab, Massachusetts Institute of Technology where he specialized in artificial intelligence and computational social science.  Prior to coming back to graduate school, he worked in the financial services industry as an investment banker and hedge fund analyst for approximately six years.  He has taught four courses in computer science and data science as a teaching fellow at Harvard University.
+                  Richard earned his Master's in Media Arts and Sciences from the Media Lab, Massachusetts Institute of Technology where he specialized in artificial intelligence and computational social science.  Prior to coming back to graduate school, he worked in financial services industry as investment banker and hedge fund analyst for approximately six years.  He has taught four courses in computer science and data science as teaching fellow at Harvard University.
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+              <img class="mx-auto rounded-circle" src="img/team/anjali.jpg" alt="Anjali Moorthy">
               <h4>Anjali Moorthy</h4>
               <p class="text-muted">Executive Director &amp; Co-founder</p>
               <div class='row justify-content-center'>
-                <div class='col col-9 col-sm-9'>
+                <div class='col col-9 col-sm-9 text-justify'>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
                 </div>
               </div>
@@ -298,7 +298,7 @@
           <div class="col-sm-6">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/partners/pavlos.jpg" alt="Pavlos Protopapas">
-              <h4>Pavlos Protopapas</h4>
+              <h4>Pavlos Protopapas, PhD</h4>
               <p class="text-muted">Scientific Program Director<br />
                 Harvard Institute for Applied Computational Science
               </p>
@@ -307,7 +307,7 @@
           <div class="col-sm-6">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/partners/lee.jpg" alt="">
-              <h4>Lee Perlman</h4>
+              <h4>Lee Perlman, PhD</h4>
               <p class="text-muted">Director<br />
                 MIT Initiative for Teaching Incarcerated Individuals
               </p>
@@ -338,6 +338,11 @@
                   <div class="form-group">
                     <input class="form-control" id="email" type="email" name="_replyto"
                     placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
+                    <p class="help-block text-danger"></p>
+                  </div>
+                  <div class="form-group">
+                    <input class="form-control" id="subject" type="text" name="subject"
+                    placeholder="Your Subject *" required data-validation-required-message="Please enter subject of your message">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
